frontend/test/should_fail/enum_011.grg
using enum_model_005;

rule r {
	pattern {}
	modify {}
}
